--- a/Project-004-Phonebook-Application/phonebook-app.yml
+++ b/Project-004-Phonebook-Application/phonebook-app.yml
@@ -5,6 +5,39 @@ Description: |
 
 Parameters:
 
+ rWebServer:
+    Type: AWS::EC2::LaunchTemplate
+    Properties:
+      LaunchTemplateData:
+        ImageId: !Ref pAmiId
+        InstanceType: t2.micro
+        KeyName: !Ref pKeypair
+        SecurityGroupIds:
+          - String
+        TagSpecifications:
+          - ResourceType: instance
+            Tags:
+              - Key: Name
+                Value: phonebook-webserver
+        UserData: 
+          Fn::Base64:
+            !Sub 
+              - |
+                #! /bin/bash -x
+                yum update -y
+                yum install python3 -y
+                yum install pip -y
+                pip3 install flask
+                pip3 install flask_mysql
+                echo "${MyDBURI}" > /home/ec2-user/dbserver.endpoint
+                FOLDER="https://raw.githubusercontent.com/SarinaLevy/my-repository/main/Project-004-Phonebook-Application/"
+                curl -s --create-dirs -o "/home/ec2-user/templates/index.html" -L "$FOLDER"templates/index.html
+                curl -s --create-dirs -o "/home/ec2-user/templates/add-update.html" -L "$FOLDER"templates/add-update.html
+                curl -s --create-dirs -o "/home/ec2-user/templates/delete.html" -L "$FOLDER"templates/delete.html
+                curl -s --create-dirs -o "/home/ec2-user/phonebook-app.py" -L "$FOLDER"phonebook-app.py
+                python3 /home/ec2-user/phonebook-app.py
+              - MyDBURI: !GetAtt rDatabaseServer.Endpoint.Address
+
   pVpcId:
     Description: VPC for deployment
     Type: AWS::EC2::VPC::Id
@@ -20,7 +53,7 @@ Resources:
     Properties:
       HealthyThresholdCount: 2
       UnhealthyThresholdCount: 2
-      Name: altaz-phonebook-tg
+      Name: sarina-phonebook-tg
       Port: 80
       Protocol: HTTP
       TargetType: instance
@@ -88,6 +121,10 @@ Resources:
       PubliclyAccessible: true
       VPCSecurityGroups: 
         - !Ref rDBSecurityGroup
+
+  pKeypair:
+  Description: Keypair for EC2 instance
+  Type: AWS::EC2::KeyPair::KeyName       
 
 
 #Outputs:
